frontend register now works

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -4,11 +4,12 @@ services:
   auth:
     build: 
       context: ./services/auth
+      dockerfile: Dockerfile.prod
     command: gunicorn --bind 0.0.0.0:5000 manage:app
     ports:
       - 5000:5000
     env_file:
-      - ./.env.dev
+      - ./.env.prod
     depends_on:
       - user_db
 
@@ -17,7 +18,19 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     env_file:
-      - ./.env.dev.db
+      - ./.env.prod.db
 
+  web:
+    build: 
+        context: ./services/web
+        dockerfile: Dockerfile.dev
+    command: python manage.py run -h 0.0.0.0
+    volumes:
+      - ./services/web/:/usr/src/app/
+    ports:
+      - 5005:5005
+    env_file:
+      - ./.env2.dev
+      
 volumes:
   postgres_data:
