created redis service. Add user route added for redis

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -31,6 +31,9 @@ services:
       - 5005:5005
     env_file:
       - ./.env2.dev
-      
+
+  redis:
+    image: "redis:alpine"
+
 volumes:
   postgres_data:
