--- a/.env2.dev
+++ b/.env2.dev
@@ -1,2 +1,7 @@
-FLASK_APP=project/__init__.py
+FLASK_APP=app/__init__.py
 FLASK_ENV=development
+DATABASE_URL=postgresql://hello_flask:hello_flask@user_db:5432/hello_flask_dev
+SQL_HOST=user_db
+SQL_PORT=5432
+DATABASE=postgres
+JWT_SECRET_KEY=super-secret
