--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -9,7 +9,7 @@ services:
     ports:
       - 5000:5000
     env_file:
-      - ./.env.prod
+      - ./.env.dev
     depends_on:
       - user_db
 
@@ -18,15 +18,16 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     env_file:
-      - ./.env.prod.db
+      - ./.env.dev.db
 
   web:
     build:
-        context: ./services/web
-        dockerfile: Dockerfile.dev
+      context: ./services/web
+      dockerfile: Dockerfile.dev
     command: python manage.py run -h 0.0.0.0
     volumes:
       - ./services/web/:/usr/src/app/
+      - ./CVPR2019:/dataset
     ports:
       - 5005:5005
     env_file:
@@ -34,6 +35,8 @@ services:
 
   redis:
     image: "redis:alpine"
+    ports:
+      - 6379:6379
 
 volumes:
   postgres_data:
