--- a/services/web/Dockerfile.dev
+++ b/services/web/Dockerfile.dev
@@ -2,7 +2,7 @@
 FROM python:3.8.1-slim-buster
 
 # set work directory
-WORKDIR /app
+WORKDIR /app/web
 
 # set environment variables
 ENV PYTHONDONTWRITEBYTECODE 1
@@ -10,8 +10,10 @@ ENV PYTHONUNBUFFERED 1
 
 # install dependencies
 RUN pip install --upgrade pip
-COPY ./requirements.txt /app/requirements.txt
+COPY ./requirements.txt /app/web/requirements.txt
 RUN pip install -r requirements.txt
 
 # copy project
-COPY . /app/
+COPY . /app/web
+
+ENTRYPOINT [ "/app/web/entrypoint.sh" ]
